dentallab/src/index.css
body {
  margin: 0 10% 10%;
  padding: 0;
  font-family: 'Open Sans', sans-serif;
}

.header-container{
  max-width: 100%;
  max-height: 100%;
}

.correct{
  background-color: #99e59e;
  border-radius: 10px;
  margin: 5px;
  padding: 2px;
  padding-bottom: 5px;
}

.incorrect{
  background-color: #ff7f7f;
  border-radius: 10px;
  margin: 5px;
  padding: 2px;
  padding-bottom: 5px;
}

.hide{
  display: none;
}

h1 {
  font-family: 'Montserrat', sans-serif;
}

h3{
  margin: 0;
  padding-top: 6px;
  padding-bottom: 1px;
}

button{
  padding: 10px;
  border-radius: 10px;
  font-size: 16px;
  margin: 5px;
}

.questionImg{
  display: block;
  align-items: center;
  height: 240px;
  object-fit: cover;
  margin-left: auto;
  margin-right: auto;
}

.options{
  display: inline-block;
  text-align: left;
}

.footer-container{
  color: #3B8B9A;
}

